# BabylonPolymorph

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GLTFSDKConfig.cmake  vcpkg.json
Morphs/: CMakeLists.txt
Morphs/Importers/: CMakeLists.txt
Morphs/Importers/Apps/Transcode.CPP/Source/: Transcode.cpp
Morphs/Importers/Transcoders/PluginSDK/: CMakeLists.txt
Morphs/Importers/Transcoders/PluginSDK/Include/PluginSDK/: IResourceServer.h  ResourceServer.h
Morphs/Importers/Transcoders/Transcoders/: CMakeLists.txt
Morphs/Importers/Transcoders/Transcoders/Include/PluginUSD/: PluginUSD.h
Morphs/Importers/Transcoders/Transcoders/Source/: TranscodersV2Json.cpp
Morphs/Importers/Transcoders/Transcoders/Source/TranscoderUSD/: ImporterUSD.cpp  ImporterUSD.h  PluginUSD.cpp
Morphs/Importers/Utils/CanvasTex/: CMakeLists.txt
Morphs/Importers/Utils/CanvasTex/Source/Win/: CanvasTex.cpp
Morphs/Importers/Utils/CoreUtils/: CMakeLists.txt
Morphs/Importers/Utils/CoreUtils/Source/: ConfigurationManagerJson.cpp
Morphs/Importers/Utils/Framework/Source/: ManifestParser.cpp
